--- a/data/ui/MenulibreWindow.glade
+++ b/data/ui/MenulibreWindow.glade
@@ -103,7 +103,7 @@
       </packing>
     </child>
     <child>
-      <object class="GtkFrame" id="frame5">
+      <object class="GtkFrame" id="details_frame">
         <property name="visible">True</property>
         <property name="can_focus">False</property>
         <property name="label_xalign">0</property>
@@ -235,7 +235,7 @@
           </object>
         </child>
         <child type="label">
-          <object class="GtkLabel" id="label10">
+          <object class="GtkLabel" id="details_label">
             <property name="visible">True</property>
             <property name="can_focus">False</property>
             <property name="label" translatable="yes">&lt;b&gt;Application Details&lt;/b&gt;</property>
@@ -267,7 +267,7 @@
                 <property name="row_spacing">3</property>
                 <property name="column_spacing">12</property>
                 <child>
-                  <object class="GtkLabel" id="label20">
+                  <object class="GtkLabel" id="terminal_label">
                     <property name="visible">True</property>
                     <property name="can_focus">False</property>
                     <property name="hexpand">True</property>
@@ -282,7 +282,7 @@
                   </packing>
                 </child>
                 <child>
-                  <object class="GtkLabel" id="label21">
+                  <object class="GtkLabel" id="notify_label">
                     <property name="visible">True</property>
                     <property name="can_focus">False</property>
                     <property name="hexpand">True</property>
@@ -297,7 +297,7 @@
                   </packing>
                 </child>
                 <child>
-                  <object class="GtkLabel" id="label22">
+                  <object class="GtkLabel" id="hide_label">
                     <property name="visible">True</property>
                     <property name="can_focus">False</property>
                     <property name="hexpand">True</property>
@@ -312,7 +312,7 @@
                   </packing>
                 </child>
                 <child>
-                  <object class="GtkSwitch" id="switch2">
+                  <object class="GtkSwitch" id="terminal_switch">
                     <property name="visible">True</property>
                     <property name="can_focus">True</property>
                   </object>
@@ -324,7 +324,7 @@
                   </packing>
                 </child>
                 <child>
-                  <object class="GtkSwitch" id="switch3">
+                  <object class="GtkSwitch" id="notify_switch">
                     <property name="visible">True</property>
                     <property name="can_focus">True</property>
                   </object>
@@ -336,7 +336,7 @@
                   </packing>
                 </child>
                 <child>
-                  <object class="GtkSwitch" id="switch4">
+                  <object class="GtkSwitch" id="hide_switch">
                     <property name="visible">True</property>
                     <property name="can_focus">True</property>
                   </object>
@@ -367,7 +367,7 @@
       </packing>
     </child>
     <child>
-      <object class="GtkFrame" id="frame7">
+      <object class="GtkFrame" id="settings_frame">
         <property name="visible">True</property>
         <property name="can_focus">False</property>
         <property name="label_xalign">0.5</property>
@@ -881,7 +881,7 @@
       </packing>
     </child>
     <child>
-      <object class="GtkLabel" id="label4">
+      <object class="GtkLabel" id="application_editor_filename">
         <property name="visible">True</property>
         <property name="can_focus">False</property>
         <property name="xalign">0</property>
@@ -1317,7 +1317,7 @@
                       </packing>
                     </child>
                     <child>
-                      <object class="GtkButton" id="button12">
+                      <object class="GtkButton" id="toolbar_delete">
                         <property name="label" translatable="yes">Delete</property>
                         <property name="visible">True</property>
                         <property name="can_focus">False</property>
