--- a/data/ui/MenulibreWindow.glade
+++ b/data/ui/MenulibreWindow.glade
@@ -123,6 +123,9 @@
                   <object class="GtkLabel" id="label18">
                     <property name="visible">True</property>
                     <property name="can_focus">False</property>
+                    <property name="tooltip_text" translatable="yes">Progam to execute, possibly with arguments.
+
+Please see http://standards.freedesktop.org/desktop-entry-spec/latest/ar01s06.html for advanced usage.</property>
                     <property name="xalign">0</property>
                     <property name="label" translatable="yes">Command</property>
                   </object>
@@ -137,6 +140,7 @@
                   <object class="GtkLabel" id="label19">
                     <property name="visible">True</property>
                     <property name="can_focus">False</property>
+                    <property name="tooltip_text" translatable="yes">The working directory to run the program in.</property>
                     <property name="xalign">0</property>
                     <property name="label" translatable="yes">Working Directory</property>
                   </object>
@@ -172,6 +176,7 @@
                         <property name="visible">True</property>
                         <property name="can_focus">True</property>
                         <property name="receives_default">True</property>
+                        <property name="tooltip_text" translatable="yes">Browse...</property>
                         <property name="image">image11</property>
                         <property name="focus_on_click">False</property>
                       </object>
@@ -213,6 +218,7 @@
                         <property name="visible">True</property>
                         <property name="can_focus">True</property>
                         <property name="receives_default">True</property>
+                        <property name="tooltip_text" translatable="yes">Browse...</property>
                         <property name="image">image12</property>
                         <property name="focus_on_click">False</property>
                       </object>
@@ -270,6 +276,7 @@
                   <object class="GtkLabel" id="terminal_label">
                     <property name="visible">True</property>
                     <property name="can_focus">False</property>
+                    <property name="tooltip_text" translatable="yes">Whether this program runs in a terminal window.</property>
                     <property name="hexpand">True</property>
                     <property name="xalign">0</property>
                     <property name="label" translatable="yes">Run in terminal</property>
@@ -285,6 +292,7 @@
                   <object class="GtkLabel" id="notify_label">
                     <property name="visible">True</property>
                     <property name="can_focus">False</property>
+                    <property name="tooltip_text" translatable="yes">Whether to use whatever startup notification is built in to either this application or toolkit.</property>
                     <property name="hexpand">True</property>
                     <property name="xalign">0</property>
                     <property name="label" translatable="yes">Use startup notification</property>
@@ -300,6 +308,7 @@
                   <object class="GtkLabel" id="hide_label">
                     <property name="visible">True</property>
                     <property name="can_focus">False</property>
+                    <property name="tooltip_text" translatable="yes">Whether to display this application in the menu.</property>
                     <property name="hexpand">True</property>
                     <property name="xalign">0</property>
                     <property name="label" translatable="yes">Hide from menus</property>
@@ -396,12 +405,29 @@
                             <property name="visible">True</property>
                             <property name="can_focus">False</property>
                             <child>
-                              <object class="GtkTreeView" id="treeview2">
+                              <object class="GtkTreeView" id="categories_treeview">
                                 <property name="visible">True</property>
                                 <property name="can_focus">False</property>
                                 <property name="model">liststore4</property>
                                 <child internal-child="selection">
                                   <object class="GtkTreeSelection" id="treeview-selection"/>
+                                </child>
+                                <child>
+                                  <object class="GtkTreeViewColumn" id="treeviewcolumn1">
+                                    <property name="min_width">150</property>
+                                    <property name="title" translatable="yes">Category</property>
+                                    <child>
+                                      <object class="GtkCellRendererText" id="cellrenderertext3"/>
+                                    </child>
+                                  </object>
+                                </child>
+                                <child>
+                                  <object class="GtkTreeViewColumn" id="treeviewcolumn2">
+                                    <property name="title" translatable="yes">Description</property>
+                                    <child>
+                                      <object class="GtkCellRendererText" id="cellrenderertext4"/>
+                                    </child>
+                                  </object>
                                 </child>
                               </object>
                             </child>
@@ -495,12 +521,37 @@
                             <property name="visible">True</property>
                             <property name="can_focus">False</property>
                             <child>
-                              <object class="GtkTreeView" id="treeview3">
+                              <object class="GtkTreeView" id="quicklists_treeview">
                                 <property name="visible">True</property>
                                 <property name="can_focus">False</property>
-                                <property name="model">liststore4</property>
+                                <property name="model">liststore5</property>
                                 <child internal-child="selection">
                                   <object class="GtkTreeSelection" id="treeview-selection3"/>
+                                </child>
+                                <child>
+                                  <object class="GtkTreeViewColumn" id="treeviewcolumn3">
+                                    <property name="title" translatable="yes">Show</property>
+                                    <child>
+                                      <object class="GtkCellRendererToggle" id="cellrenderertoggle1"/>
+                                    </child>
+                                  </object>
+                                </child>
+                                <child>
+                                  <object class="GtkTreeViewColumn" id="treeviewcolumn4">
+                                    <property name="title" translatable="yes">Name</property>
+                                    <property name="expand">True</property>
+                                    <child>
+                                      <object class="GtkCellRendererText" id="cellrenderertext1"/>
+                                    </child>
+                                  </object>
+                                </child>
+                                <child>
+                                  <object class="GtkTreeViewColumn" id="treeviewcolumn5">
+                                    <property name="title" translatable="yes">Command</property>
+                                    <child>
+                                      <object class="GtkCellRendererText" id="cellrenderertext2"/>
+                                    </child>
+                                  </object>
                                 </child>
                               </object>
                             </child>
@@ -603,6 +654,7 @@
                               <object class="GtkLabel" id="label5">
                                 <property name="visible">True</property>
                                 <property name="can_focus">False</property>
+                                <property name="tooltip_text" translatable="yes">Generic name of the application, for example "Web Browser".</property>
                                 <property name="xalign">0</property>
                                 <property name="label" translatable="yes">Generic Name</property>
                               </object>
@@ -617,6 +669,7 @@
                               <object class="GtkLabel" id="label13">
                                 <property name="visible">True</property>
                                 <property name="can_focus">False</property>
+                                <property name="tooltip_text" translatable="yes">A list of strings identifying the environments that should not display this desktop entry.</property>
                                 <property name="xalign">0</property>
                                 <property name="label" translatable="yes">Not Shown In</property>
                               </object>
@@ -631,6 +684,7 @@
                               <object class="GtkLabel" id="label6">
                                 <property name="visible">True</property>
                                 <property name="can_focus">False</property>
+                                <property name="tooltip_text" translatable="yes">A list of strings identifying the environments that should display this desktop entry.</property>
                                 <property name="xalign">0</property>
                                 <property name="label" translatable="yes">Only Shown In</property>
                               </object>
@@ -645,6 +699,7 @@
                               <object class="GtkLabel" id="label14">
                                 <property name="visible">True</property>
                                 <property name="can_focus">False</property>
+                                <property name="tooltip_text" translatable="yes">Path to an executable file on disk used to determine if the program is actually installed.</property>
                                 <property name="xalign">0</property>
                                 <property name="label" translatable="yes">Try Exec</property>
                               </object>
@@ -659,6 +714,7 @@
                               <object class="GtkLabel" id="label15">
                                 <property name="visible">True</property>
                                 <property name="can_focus">False</property>
+                                <property name="tooltip_text" translatable="yes">The MIME type(s) supported by this application.</property>
                                 <property name="xalign">0</property>
                                 <property name="label" translatable="yes">Mimetypes</property>
                               </object>
@@ -673,6 +729,7 @@
                               <object class="GtkLabel" id="label16">
                                 <property name="visible">True</property>
                                 <property name="can_focus">False</property>
+                                <property name="tooltip_text" translatable="yes">A list of strings that may be used in addition to other metadata to describe this entry.</property>
                                 <property name="xalign">0</property>
                                 <property name="label" translatable="yes">Keywords</property>
                               </object>
@@ -687,6 +744,7 @@
                               <object class="GtkLabel" id="label23">
                                 <property name="visible">True</property>
                                 <property name="can_focus">False</property>
+                                <property name="tooltip_text" translatable="yes">If specified, it is known that the application will map a least one window with the given string as its WM class or WM name hint.</property>
                                 <property name="xalign">0</property>
                                 <property name="label" translatable="yes">Startup WM Class</property>
                               </object>
@@ -916,6 +974,7 @@
             <property name="headers_visible">False</property>
             <property name="reorderable">True</property>
             <property name="rules_hint">True</property>
+            <property name="level_indentation">24</property>
             <child internal-child="selection">
               <object class="GtkTreeSelection" id="treeview-selection1"/>
             </child>
@@ -998,7 +1057,24 @@
   <object class="GtkListStore" id="liststore1"/>
   <object class="GtkListStore" id="liststore2"/>
   <object class="GtkListStore" id="liststore3"/>
-  <object class="GtkListStore" id="liststore4"/>
+  <object class="GtkListStore" id="liststore4">
+    <columns>
+      <!-- column-name cat_name_col -->
+      <column type="gchararray"/>
+      <!-- column-name cat_desc_col -->
+      <column type="gchararray"/>
+    </columns>
+  </object>
+  <object class="GtkListStore" id="liststore5">
+    <columns>
+      <!-- column-name quicklist_show_col -->
+      <column type="gchararray"/>
+      <!-- column-name quicklist_name_col -->
+      <column type="gchararray"/>
+      <!-- column-name quicklist_command_col -->
+      <column type="gchararray"/>
+    </columns>
+  </object>
   <object class="GtkWindow" id="menulibre_window">
     <property name="height_request">520</property>
     <property name="can_focus">False</property>
@@ -1241,6 +1317,7 @@
                             <property name="visible">True</property>
                             <property name="can_focus">False</property>
                             <property name="receives_default">True</property>
+                            <property name="tooltip_text" translatable="yes">Save Launcher</property>
                             <property name="image">image8</property>
                           </object>
                           <packing>
