--- a/data/ui/MenulibreWindow.glade
+++ b/data/ui/MenulibreWindow.glade
@@ -1095,7 +1095,7 @@ Please see http://standards.freedesktop.org/desktop-entry-spec/latest/ar01s06.ht
     <property name="height_request">520</property>
     <property name="can_focus">False</property>
     <property name="title" translatable="yes">MenuLibre</property>
-    <property name="icon_name">alacarte</property>
+    <property name="icon_name">menulibre</property>
     <child>
       <object class="GtkBox" id="box1">
         <property name="visible">True</property>
