--- a/data/ui/MenulibreWindow.glade
+++ b/data/ui/MenulibreWindow.glade
@@ -975,26 +975,80 @@ Please see http://standards.freedesktop.org/desktop-entry-spec/latest/ar01s06.ht
     <property name="visible">True</property>
     <property name="can_focus">False</property>
     <child>
-      <object class="GtkScrolledWindow" id="scrolledwindow1">
-        <property name="width_request">220</property>
+      <object class="GtkBox" id="box5">
         <property name="visible">True</property>
         <property name="can_focus">False</property>
-        <property name="shadow_type">in</property>
-        <property name="min_content_width">185</property>
+        <property name="orientation">vertical</property>
         <child>
-          <object class="GtkTreeView" id="treeview1">
+          <object class="GtkScrolledWindow" id="scrolledwindow1">
+            <property name="width_request">220</property>
             <property name="visible">True</property>
-            <property name="can_focus">True</property>
-            <property name="has_focus">True</property>
-            <property name="model">liststore1</property>
-            <property name="headers_visible">False</property>
-            <property name="reorderable">True</property>
-            <property name="rules_hint">True</property>
-            <property name="level_indentation">24</property>
-            <child internal-child="selection">
-              <object class="GtkTreeSelection" id="treeview-selection1"/>
+            <property name="can_focus">False</property>
+            <property name="shadow_type">in</property>
+            <property name="min_content_width">185</property>
+            <child>
+              <object class="GtkTreeView" id="classic_view_treeview">
+                <property name="visible">True</property>
+                <property name="can_focus">True</property>
+                <property name="has_focus">True</property>
+                <property name="model">liststore1</property>
+                <property name="headers_visible">False</property>
+                <property name="rules_hint">True</property>
+                <property name="enable_search">False</property>
+                <property name="level_indentation">24</property>
+                <property name="rubber_banding">True</property>
+                <child internal-child="selection">
+                  <object class="GtkTreeSelection" id="treeview-selection4"/>
+                </child>
+              </object>
             </child>
           </object>
+          <packing>
+            <property name="expand">True</property>
+            <property name="fill">True</property>
+            <property name="position">0</property>
+          </packing>
+        </child>
+        <child>
+          <object class="GtkToolbar" id="toolbar3">
+            <property name="visible">True</property>
+            <property name="can_focus">False</property>
+            <property name="icon_size">1</property>
+            <style>
+              <class name="inline-toolbar"/>
+            </style>
+            <child>
+              <object class="GtkToolButton" id="classic_view_move_up">
+                <property name="visible">True</property>
+                <property name="can_focus">False</property>
+                <property name="label" translatable="yes">Move Up</property>
+                <property name="use_underline">True</property>
+                <property name="icon_name">go-up-symbolic</property>
+              </object>
+              <packing>
+                <property name="expand">False</property>
+                <property name="homogeneous">True</property>
+              </packing>
+            </child>
+            <child>
+              <object class="GtkToolButton" id="classic_view_move_down">
+                <property name="visible">True</property>
+                <property name="can_focus">False</property>
+                <property name="label" translatable="yes">Move Down</property>
+                <property name="use_underline">True</property>
+                <property name="icon_name">go-down-symbolic</property>
+              </object>
+              <packing>
+                <property name="expand">False</property>
+                <property name="homogeneous">True</property>
+              </packing>
+            </child>
+          </object>
+          <packing>
+            <property name="expand">False</property>
+            <property name="fill">True</property>
+            <property name="position">1</property>
+          </packing>
         </child>
       </object>
       <packing>
@@ -1092,7 +1146,8 @@ Please see http://standards.freedesktop.org/desktop-entry-spec/latest/ar01s06.ht
     </columns>
   </object>
   <object class="GtkWindow" id="menulibre_window">
-    <property name="height_request">520</property>
+    <property name="width_request">700</property>
+    <property name="height_request">600</property>
     <property name="can_focus">False</property>
     <property name="title" translatable="yes">MenuLibre</property>
     <property name="icon_name">menulibre</property>
